--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -17,7 +17,7 @@ OpenMP
 
 @ARTICLE{Huang:openmpGlobalArrays2005,
     author =  "L. Huang and B. Chapman and Z. Liu",
-    title = "Towards a more efficient implementation of OpenMP for clusters via translation to global arrays",
+    title = "{Towards a More Efficient Implementation of OpenMP for Clusters via Translation to Global Arrays}",
     journal = "Parallel Computing",
     VOLUME = {31},
     NUMBER = {},
@@ -25,7 +25,6 @@ OpenMP
     PUBLISHER = {Elsevier},
     YEAR = {2005}
 }
-
 
 @ARTICLE{paradiseo:JHeuristics2004,
 	AUTHOR = "S. Cahon and N. Melab and E.-G. Talbi",
@@ -93,6 +92,7 @@ OpenMP
 	AUTHOR = "E. Burns and S. Lemons and W. Ruml and R. Zhou",
 	TITLE = "{Suboptimal and Anytime Heuristic Search on Multi-Core Machines}",
 	BOOKTITLE = "$19^{th}$ International Conference on Automated Planning and Scheduling (ICAPS-2009)",
+	PAGES = {42-49},
 	PUBLISHER = {AAAI Press},
 	YEAR = {2009}	}
 
@@ -100,13 +100,15 @@ OpenMP
 	AUTHOR = "E. Burns and S. Lemons and R. Zhou and W. Ruml",
 	TITLE = "{Best-First Heuristic Search for Multi-Core Machines}",
 	BOOKTITLE = "$21^{st}$ International Joint Conference on Artificial Intelligence (IJCAI-09)",
+	PAGES = {449-455},
 	PUBLISHER = {AAAI Press},
 	YEAR = {2009}	}
 
 @INPROCEEDINGS{vidal:socs2010,
 	AUTHOR = "V. Vidal and L. Bordeaux and Y. Hamadi",
 	TITLE = "{Adaptive K-Parallel Best-First Search: A simple but Efficient Algorithm for Multi-Core Domain-Independent Planning}",
-	BOOKTITLE = "$3^{rd}$ Symposium on Combinatorial Search (SOCS'10)",
+	BOOKTITLE = "$3^{rd}$ Annual Symposium on Combinatorial Search (SOCS'10)",
+	PAGES = {100-107},
 	PUBLISHER = {AAAI Press},
 	YEAR = {2010}	}
 
@@ -133,6 +135,7 @@ OpenMP
    title     = {{Divide-and-Evolve: a New Memetic Scheme for Domain-Independent Temporal Planning}},
    booktitle = {$6^{th}$ European Conference on Evolutionary Computation in Combinatorial Optimization (EvoCOP'06)},
    year      = {2006},
+   pages		 = {247-260},
    editor    = {J. Gottlieb and G. Raidl},
    publisher = {Springer Verlag} }
    
@@ -151,7 +154,7 @@ OpenMP
 
 @Article{pddl:jair2003,
   author={M. Fox and D. Long},
-  title={{PDDL2.1: An extension to {PDDL} for expressing temporal planning domains}},
+  title={{PDDL2.1: An Extension to PDDL for Expressing Temporal Planning Domains}},
   journal={Journal of Artificial Intelligence Research},
 	volume={20},
 	pages={61-124},
@@ -166,7 +169,7 @@ OpenMP
   year=2000
 }
 
-@Article{	  ff:jair01,
+@Article{ff:jair01,
   author	= {J. Hoffmann and B. Nebel},
   title		= {{The {FF} Planning System: {F}ast Plan Generation Through
 		  Heuristic Search}},
@@ -178,8 +181,7 @@ OpenMP
 
 @inproceedings{rintanen:acai2010,
   author    = {Jussi Rintanen},
-  title     = {{Heuristic Planning with SAT: {B}eyond Uninformed Depth-First
-               Search}},
+  title     = {{Heuristic Planning with SAT: Beyond Uninformed Depth-First Search}},
   booktitle = {$23^{rd}$ Australasian Conference on Artificial Intelligence (ACAI-2010)},
   year      = {2010},
   pages     = {415-424}
@@ -230,7 +232,7 @@ OpenMP
   year      = {2006}
 }
 
-@inproceedings{ HDA-star,
+@inproceedings{HDA-star,
   author	= {A. Kishimoto and A. S. Fukunaga and A. Botea},
   title		= "{Scalable, Parallel Best-First Search for Optimal
 		  Sequential Planning}",
@@ -239,7 +241,7 @@ OpenMP
   pages		= {10-17}
 }
 
-@InProceedings{	  dovetailing,
+@InProceedings{dovetailing,
   author	= {R. Valenzano and N. Sturtevant and J. Schaeffer and K.
 		  Buro and A. Kishimoto},
   title		= "{Simultaneously Searching with Multiple Settings: {A}n
@@ -250,7 +252,7 @@ OpenMP
   pages		= {177-184}
 }
 
-@Book{		  gnt04,
+@Book{gnt04,
   author	= {M. Ghallab and D. Nau and P. Traverso},
   title		= {{Automated Planning: Theory and Practice}},
   publisher	= {Morgan Kaufmann},
