--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -60,6 +60,8 @@
 \newcommand{\DAEX}{{\sc DaE$_{\text{X}}$}}
 \newcommand{\DAEYAHSP}{{\sc DaE$_{\text{YAHSP}}$}}
 \newcommand{\YAHSP}{{\sc YAHSP}}
+\newcommand{\PARADISEO}{{\sc ParadisEO}}
+\newcommand{\OPENMP}{{\sc OpenMP}}
 
 \begin{document}
 
@@ -105,18 +107,25 @@ Vincent Vidal\\
 Multicore machines are becoming a standard way to speed up the system performance.
 After having instantiated the evolutionary metaheuristic \DAEX\ with the forward search \YAHSP\ planner, 
 we investigate on the global parallelism approach, which exploits the intrinsic parallelism of the individual evaluation.
-This paper describes a parallel shared-memory version of the \DAEYAHSP\ planning system using the OpenMP directive-based API.
+This paper describes a parallel shared-memory version of the \DAEYAHSP\ planning system using the \OPENMP\ directive-based API.
 The parallelization scheme applies at a high level of abstraction and thus can be used by any evolutionary algorithm implemented with the Evolving Objects framework.
 The proof of concept is validated on a 48-core machine with two planning tasks extracted from the last international planning competition.
-Experiments show significant speedups with increasing number of cores.
+Experiments show significant speedups with an increasing number of cores.
 This preliminary work opens an avenue for parallelizing any evolutionary
 algorithm developed with EO that would target multi-core architectures.
 \end{abstract}
 
-\category{I.2.8}{Computing Methodologies}{Artificial Intelligence }{Problem Solving, Control Methods, and Search}
+\category{I.2.8}{Computing Methodologies}{Artificial In\-tel\-ligen\-ce}[Problem Solving, Control Methods, and Search]
+%
+\category{D.1.3}{Pro\-gramming Techniques}{Concurrent Programming}[Parallel Programming]
+
+% A category with the (minimum) three required fields
+%\category{H.4}{Information Systems Applications}{Miscellaneous}[Problem Solving, Control Methods, and Search]
+%A category including the fourth, optional field follows...
+%\category{D.2.8}{Software Engineering}{Metrics}[complexity measures, performance measures]
 
 %General Terms: This section is limited to the following 16 terms. Select one of the following general terms that best describes the content of your submission: Algorithms, Management, Measurement, Documentation, Performance, Design, Economics, Reliability, Experimentation, Security, Human Factors, Standardization, Languages, Theory, Legal Aspects, Verification
-\terms{Algorithms}
+\terms{Algorithms, Experimentation, Performance}
 
 \keywords{Parallel Evolutionary Algorithm, Automated Planning, Parallel Shared-Memory, Implementation} % NOT required for Proceedings
 
@@ -128,7 +137,7 @@ algorithm developed with EO that would target multi-core architectures.
 
 The classical planning problem in Artificial Intelligence \cite{gnt04} is to
 find a path in a transition system: a sequence of actions which maps an initial
-state $I$ into a state $G$ satisfying a set of desired goals. Usually a metric
+state $I$ into a state $G$ satisfying a set of desired goals. Usually, a metric
 is associated with the solution plan such as length, cost or duration (where
 concurrent actions are allowed). In domain-independent planning, problems are
 described  with  the  Planning  Domain  Description  Language  (PDDL)
@@ -148,23 +157,23 @@ This nice property opens an avenue towards the design of a parallel planning sys
 
 Moreover, the implementation of \DAEX\ has been made with the STL-based Evolving
 Objects framework\footnote{\url{http://eodev.sf.net}} which provides an abstract
-control structure to develop any kind of evolutionary algorithm. Therefore our
+control structure to develop any kind of evolutionary algorithm. Therefore, our
 parallelization scheme is easily transposable to any evolutionary algorithm
 developed within the EO framework.
 
 As a proof of concept, we implemented a multi-threaded version of \DAEYAHSP, the
 instantiation of \DAEX\ with the heuristic forward search \YAHSP\ planner
-\cite{yahsp:icaps2004}, using the OpenMP directive-based
+\cite{yahsp:icaps2004}, using the \OPENMP\ directive-based
 API\footnote{\url{http://www.openmp.org}}. The design of experiment is built on
 problems extracted from the last international planning
 competition\footnote{\url{http://ipc.icaps-conference.org}} with the
 multi-threaded \DAEYAHSP\ release mapped onto a 48-core parallel machine.
 
 While clusters is the most common distributed memory system for high performance
-computing, multi-core architectures are gaining popularity as they become the
+computing, multicore architectures are gaining popularity as they become the
 {\it de facto} standard in computer mass market. The GPGPU-based architectures
-share similar characteristics, but are not well suited for executing programs
-that would not be designed for it.
+share similar characteristics, but require a specific programming language.
+As a consequence we would have to rewrite entirely the \YAHSP\ solver called by our evaluation function.
 
 The paper is outlined as follows. We first describe some previous works in the
 fields of parallel evolutionary computation and AI planning, before presenting
@@ -183,20 +192,15 @@ conclude and provide some insights of possible future works.
 A large literature deals with the parallelization techniques of Evolutionary
 Algorithms (EAs). Depending on the targeted architecture, the parallelization
 scheme may be chosen differently. The main approaches may be classified among:
-simple {\it independent runs parallelism}, EA with {\it global parallelism}
-where the evaluation is decentralized but not the other operators, cellular EAs
-(cEA) where the selection and reproduction steps are decentralized, {\it dEA}
-approach using a multi-population {\it island parallelism}.
+simple {\it run level parallelism}, EA with {\it global parallelism}
+where the evaluation stage is parallelized but not the other operators, cellular EAs
+(cEA) where the selection and reproduction steps are parallelized, and the {\it dEA}
+approach, using a multi-population {\it island parallelism} \cite{alba:IEEE2002}.
 
-The runs parallelism being trivially achieved by running several runs, the first
-step when parallelizing a new algorithm is often to  try  the  global
-parallelization approach, because the evaluation step is often the most costly
-part of EAs and because evaluation are generally intrinsically independent.
+The run level parallelism being trivially achieved by running several runs concurrently, the first step when parallelizing a new algorithm is often to try the global
+parallelization approach, because the evaluation step is often the most costly part of EAs and because individual evaluations are generally intrinsically independent.
 
-Doing a review of existing algorithms being beyond the scope of this paper, we 
-redirect the reader on the review of Alba and Tomassini \cite{alba:IEEE2002}.
-
-
+%Doing a review of existing algorithms being beyond the scope of this paper, we redirect the reader on the review of Alba and Tomassini \cite{alba:IEEE2002}.
 
 \paragraph{Parallel Planning} % (VV)
 \label{section:previous-work}
@@ -205,12 +209,12 @@ Several approaches to parallel planning have been proposed in recent years.
 Parallel Retracting A* \cite{PRA-star}, was implemented on a Connection Machine
 and had to deal with very severe memory limitations. In that algorithm,
 a distributed hash function is used to allocate generated states to a unique
-processing unit and avoid unnecessary state duplications. PRA* dealt with the
-memory limitation through a retraction mechanism which allowed a processor to
+processing unit and avoid unnecessary state duplications. PRA* deals with the
+memory limitation through a retraction mechanism which allow a processor to
 free its memory by dropping states. In order to confirm the transfer of a state,
-synchronous communication channels had to be used, which seriously slowed down
+synchronous communication channels must be used, which seriously slow down
 the search process. Transposition-table driven work scheduling \cite{TDS},
-similarly to PRA* uses a hash function to avoid duplication. It is based on IDA*
+similarly to PRA*, uses a hash function to avoid duplication. It is based on IDA*
 and, running on a standard architecture, does not necessitate any retraction
 mechanism and can efficiently exploit asynchronous communication channels.
 Parallel Frontier A* with Delayed Duplicate Detection \cite{PFADDD} uses
@@ -408,49 +412,40 @@ necessitating to change the scope of this data.
 %\subparagraph{Evolving Object, an evolutionary computation framework}\\
 %\DAEYAHSP\ has been implemented within the Evolving Objects framework (\url{http://eodev.sourceforge.net/}), an Open Source, STL-based, C++ Evolutionary Computation library. 
 
-Standing for Evolving Object\footnote{Evolving Objects:
-\url{http://eodev.sf.net}}, EO is a largely used and known framework in
-evolutionary computation based on template approach in C++. It helps at
-designing evolutionary algorithms for hard optimization problems, from
-continuous to combinatorial ones.
+Standing for Evolving Objects, EO is a largely used and known framework in evolutionary computation based on the C++ template approach. It helps at designing evolutionary algorithms for hard optimization problems, from continuous to combinatorial ones.
 
-An extension of EO for parallelization of algorithms, ParadisEO, has been
-proposed by Cahon et al. \cite{paradiseo:JHeuristics2004}. It uses the Message
-Passing Interface (MPI\footnote{with MPICH2:
-\url{http://www.mcs.anl.gov/research/projects/mpich2/}}) API and proposes
-several parallelization schemes, available by calling wrappers around common
-functions of EO. ParadisEO targets multi-processors machines, especially
-clusters and grids, for running large-scale, general purpose EAs.
+A parallel extension of EO, \PARADISEO, has been proposed by Cahon et al. \cite{paradiseo:JHeuristics2004}. It is based on the Message Passing Interface and proposes several parallelization schemes, available by calling wrappers around common functions of EO. \PARADISEO\ targets multi-processors machines, especially clusters and grids, for running large-scale, general purpose EAs.
+As we are targeting a multicore architecture, and since our evaluation function has a large memory footprint, message passing may introduce a time consuming memory copy overhead. 
+This reason discards the \PARADISEO\ framework.
 
-We have chosen not to use this framework because we were targeting a multicore
-architecture, where message passing is somewhat useless and may introduce an
-overhead higher than other approaches. For a multicore architecture, shared
-memory parallelization approach is a better candidate as it does not necessitate
-heavy libraries linked to the core program. In this work, we have used
-OpenMP\footnote{OpenMP: \url{http://www.openmp.org}}, that uses a set of
-compiler directives to tell the compiler which part of a program should be
-parallelized. The main advantage of OpenMP is that it is designed to make easy
-to parallelize an existing program\cite{special:parallelComputing2005}. It may
-also be used as a simple approach to program clusters, either with specialized
-methods or virtual SMP machines\cite{Huang:openmpGlobalArrays2005}.
+For a multicore architecture, a shared-memory parallelization approach is thus a better candidate. 
+In order to garantee a non-blocking algorithm, we apply the Concurrent Read Exclusive Write (CREW) strategy\footnote{Multiple processors can read a memory cell but only one can write at a time.} of the Parallel Random Access Machine (PRAM).
+In this work, we have used \OPENMP\ which defines a set of compiler directives to tell which part of a program should be parallelized and which part of memory can be shared out. 
+The main advantage of \OPENMP\ is that it is designed to make easy to parallelize an existing program \cite{special:parallelComputing2005}. The parallel shared-memory scheme may also be used as a simple approach to program clusters, either with a dedicated method, or through a virtual symmetric multiprocessing machine \cite{Huang:openmpGlobalArrays2005}.
 
-In order to parallelize a large scope of the framework EO, an analysis was done
-to identify the most used resources. Most of the EO
-classes use the ``Functor''\footnote{Also called function object} pattern. The
-advantages of this design is to get the genericity and the benefits given by
-classes while keeping the simplicity of a single call to a function. EO Functors
-generally take a population (a vector of decompositions) as argument.
+%In order to parallelize a large scope of the framework EO, a profiling was done to identify the most time-consuming steps. 
 
 Considering that the evaluation of the population is the most costly part of the
 algorithm, this step is our first target to parallelize. Moreover, in most cases
 the evaluation done on individuals can be made in parallel without data
 dependencies. There are several classes in EO implementing evaluation operators
 but all of them call a common function to apply the evaluation on a population,
-this is the function ``apply''.
+this is the function {\tt apply}. The {\tt apply} function takes a functor as argument.
+The advantages of the {\tt Functor} pattern is to get the genericity and the modularity given by
+object-oriented programming while keeping the simplicity of a single call to a function. EO functors
+generally take a population (a vector of individuals) as argument.
+In order to enable \OPENMP\ to build a multi-threaded algorithm without memory bounds, the evaluation functor ({\tt proc} in the apply function) must
+fulfill certain requirements. In EO, the evaluation functors are supposed to be
+instantiated only once. In a sequential mode, the same instance is used to
+evaluate every individuals in a population. In a parallelized mode, one must
+ensure that the evaluation functor have  thread-local  data  structures.
+
+
 
 \paragraph{EO::apply} % (CC)
 %\footnote{Look at the header file apply.h available in the sources of EO}
-The function called ``apply'' takes as parameters a population and a function to apply to each individual.
+The {\tt apply} function takes as parameters a population and a function to be applied to each individual.
+The parallelization of this region of code is done thanks to the pragma {\tt omp for}.
 
 %% TODO: refaire algo proprement avec algorithm2e
 
@@ -460,54 +455,30 @@ The function called ``apply'' takes as parameters a population and a function to
 \vspace{0.2cm}
 \begin{verbatim}
 template < typename EOT >
-void apply< EOT >( eoUF< EOT, void >& proc,
-          std::vector< EOT >& pop )
+void apply< EOT >(eoUF< EOT, void >& proc, 
+                  std::vector< EOT >& pop)
 {
- for ( size_t i = 0; i < pop.size(); ++i )
-  proc( pop[i] );
+   for (size_t i = 0; i < pop.size(); ++i) 
+       proc(pop[i]);
 }
 \end{verbatim}
 \end{algorithm}
-%\vspace{-0.2cm}
 
-%% Here is the pseudo code of this function:
-% \begin{algorithmic}
- % \WHILE {$i\geq population size$}
- % \STATE $$
- % \ENDWHILE
-% \end{algorithmic}
-
-The parallelization of this region of code is done thanks to the pragma ``omp
-for''. This can be translated in the PRAM model by the use of
-CREW\footnote{CREW: Concurrent Read Exclusive Write} model.
-
-%%According to the PRAM\footnote{wikipedia PRAM} models we are using a CREW\footnote{[A[Concurrent Read Exclusive Write} model.
-
-%% TODO: refaire algo proprement avec algorithm2e
-
-%\vspace{-0.2cm}
 \begin{algorithm}[h!]
-\caption{apply(proc, pop) parallelized using OpenMP directives}
+\caption{apply(proc, pop) parallelized using \OPENMP}
 \vspace{0.2cm}
 \begin{verbatim}
 template < typename EOT >
-void apply< EOT >( eoUF< EOT, void >& proc,
-          std::vector< EOT >& pop )
+void apply< EOT >(eoUF< EOT, void >& proc,
+                  std::vector< EOT >& pop)
 {
 #pragma omp for
- for ( size_t i = 0; i < pop.size(); ++i )
-  proc( pop[i] );
+   for (size_t i = 0; i < pop.size(); ++i)
+       proc( pop[i] );
 }
 \end{verbatim}
 \end{algorithm}
 %\vspace{-0.2cm}
-
-In order to enable OpenMP to build a multi-threaded algorithm without side
-effects, the evaluation functor (the ``proc'' in the apply function) must
-fulfill certain requirements. In EO, the evaluation functors are supposed to be
-instantiated only once. In a sequential mode, the same instance is used to
-evaluate every individuals in a population. In a parallelized mode, one must
-ensure that the evaluation functor have  thread-local  data  structures.
 
 When parallelizing the evaluation loop in an evolutionary algorithm, there
 exists a synchronization step at each iteration, this ensure that no race-condition
@@ -519,9 +490,9 @@ the case in the majority of evolutionary algorithms, and also in \DAEX.
 The design of YAHSP has been made in C with efficiency in mind, and kept as
 light as possible. This is typically the kind of implementation, making heavy
 use of global variables, not designed for a concurrent use by several parallel
-threads, and where thread-safety is clearly not ensured. However, OpenMP offers
+threads, and where thread-safety is clearly not ensured. However, \OPENMP\ offers
 a facility to deal with global variables, in order to change their scope: the
-``omp threadprivate'' pragma. It takes as parameter a list of global variables
+{\tt omp threadprivate} pragma. It takes as parameter a list of global variables
 whose scope must be changed from shared by all threads to private (local) to
 each thread. And finally, specifying which global variable should be rendered
 private to each thread was the only thing we had to do to ensure thread-safety
@@ -530,7 +501,7 @@ relaxed plans and the lookahead plans are made private to each thread, ensuring
 that concurrent executions of YAHSP do not use the same portions of the global
 memory.
 
-\paragraph{\DAEYAHSP Specific Parallelization Issues} % (JD)
+\paragraph{\DAEYAHSP\ Specific Parallelization Issues} % (JD)
 
 \DAEYAHSP\ evaluation step calls the YAHSP solver several times on the same
 decomposition and thus uses several variables to keep the state of the
@@ -546,7 +517,7 @@ decomposition itself, and not as attributes of the evaluation  functor.
 \subsection{Setup}
 
 \paragraph{Platform} % (PS)
-The algorithm is programmed in C++ using GCC and the GNU OpenMP threading
+The algorithm is programmed in C++ using GCC and the GNU \OPENMP\ threading
 library (GOMP), both version 4.4.4. It is run on a 48-core DELL PowerEdge R815
 Rack Server set up with four 12-core AMD Opteron(tm) 6174, 2.2GHz (12x512 KB
 cache) processors with 192GB of RAM, under Linux x86\_64 2.6.32.
@@ -588,9 +559,7 @@ without violating the maximum number of stacks constraints.
 \paragraph{Algorithm Parameters} % (PS)
 
 All the experiments were done with the parameter set described in
-\cite{dae:icaps2010} except for the population size which varies according to
-the experiment. The fixed evolution engine is a (pop size+ $7 \times$ pop
-size)-ES: $n$ individuals generate $7 \times n$ offspring without selection.
+\cite{dae:icaps2010} except for the population size which varies depending on the experiment. The fixed evolution engine is a (popsize + $7 \times$ popsize)-ES: $n$ individuals generate $7 \times n$ offspring without selection.
 For all runs, the following steady-state stopping condition has been applied:
 after at least 10 generations, evolution is stopped if no improvement of the
 best fitness in the population is made during 50 generations, with a maximum of
@@ -639,12 +608,12 @@ resulting distributions are presented as standard boxplots.
   \hfill
   \subfigure[openstacks 17]{\includegraphics[width=0.23\textwidth]{images/openstacks_proc_time_dynamic.pdf}}
  \end{center}
- \caption{Absolute wallclock time distributions of 11 runs of \DAEYAHSP\ according to the number of processors.}
+ \caption{Wallclock time distributions of 11 runs of \DAEYAHSP\ reletive to the number of processors used.}
  \label{fig:proc_elevators_vs_openstacks}
 \end{figure}
 
 Figure \ref{fig:proc_elevators_vs_openstacks} shows that on both problems, the
-computation time decrease with the number of processors used. Comparing to the
+computation time decreases with the number of processors used. Comparing to the
 sequential version (running on a single processor), the parallel one permit a
 decrease that is similar on both problems. The dispersions of the distribution
 is due to the steady-state stopping criterion that may be reached after different
@@ -652,9 +621,9 @@ times.
 
 \paragraph{Comparison of Static and Dynamic Scheduling} % (CC, JD)
 
-OpenMP let the choice between static and dynamic task scheduling. The default one is the static scheduling.
+\OPENMP\ lets the choice between static and dynamic task scheduling. The default one is the static scheduling.
 In the static scheduling, a loop iterating through a set of tasks will be
-divided in several tasks according to the number of available processors.
+divided in several tasks relative to the number of available processors.
 Regarding dynamic scheduling, during the runtime if one thread has finished
 these tasks it gets the next available one, in a queue.
 
@@ -675,7 +644,7 @@ these tasks it gets the next available one, in a queue.
   \hfill
   \subfigure[dynamic]{\includegraphics[width=0.23\textwidth]{images/openstacks_proc_time_dynamic.pdf}}
  \end{center}
- \caption{Absolute wallclock time distributions of 11 runs of \DAEYAHSP\ according to the number of processors, on the temporal openstacks-17 problem.}
+ \caption{Wallclock time distributions of 11 runs of \DAEYAHSP\ relative to the number of processors, on the temporal openstacks-17 problem.}
  \label{fig:proc_static_vs_dynamic}
 \end{figure}
 
@@ -692,13 +661,13 @@ from the same distribution ($p=0.03$).
   \hfill
   \subfigure[rescaled]{\includegraphics[width=0.23\textwidth]{images/elevators_pop_time_zoom.pdf}}
  \end{center}
- \caption{Absolute wallclock time distributions of 11 runs of \DAEYAHSP\ according to the population size, on the sequential elevators-12 problem, using 48 processors.}
+ \caption{Wallclock time distributions of 11 runs of \DAEYAHSP\ relative to the population size, on the sequential elevators-12 problem, using 48 processors.}
  \label{fig:elevators_pop}
 \end{figure}
 
 Figure \ref{fig:elevators_pop} shows that the median computation time on a
 multicore machine increases linearly with the size of the population. The
-dispersions of the distribution is due to the steady-state stopping criterion
+dispersion of the distribution is due to the steady-state stopping criterion
 that may be reached after different times, with a higher probability when the
 population size is small.
 
@@ -708,7 +677,7 @@ population size is small.
   \hfill
   \subfigure[openstacks 17]{\includegraphics[width=0.23\textwidth]{images/openstacks_pop_time_speedup.pdf}}
  \end{center}
- \caption{Absolute speedup distributions of 11 runs of \DAEYAHSP\ according to the population size, on the both sequential elevators-12 and temporal openstacks-17 problems, using 48 processors.}
+ \caption{Speedup distributions of 11 runs of \DAEYAHSP\ relative to the population size, on the both sequential elevators-12 and temporal openstacks-17 problems, using 48 processors.}
  \label{fig:speedup_pop}
 \end{figure}
 
@@ -728,7 +697,7 @@ The parameters $T^*_1$ and $T_p$ are respectively the time used for a sequential
 %parallelization of the individual evaluation.
 
 We made a proof-of-concept of a shared-memory parallelization of the evaluation
-step of the \DAEX algorithm, based on the OpenMP directive-based API on a common
+step of the \DAEX algorithm, based on the \OPENMP\ directive-based API on a common
 48-core machine. Thanks to the abstraction level provided by the EO framework,
 this scheme is immediately available for any evolutionary algorithm as far as
 the context of the evaluation functor is thread-local and reentrant.
@@ -801,14 +770,14 @@ This work is being partially funded by the French National Research Agency throu
 %This paper describes a multi-threaded release of \DAEYAHSP.
 %
 %This paper describes a parallel shared-memory release of the \DAEYAHSP\ planning system.
-%using the OpenMP directive-based API.
+%using the \OPENMP\ directive-based API.
 %
 %to obtain high levels of performance special care has been given to get reentrant procedures.
 %isolate context variables
 %
 % concurrent programming
 %
-%OpenMP primarily consists of a set of compiler directives (pragmas) that are inserted into a Fortran, C or C++ program to convey information to an OpenMP compiler.
+%\OPENMP\ primarily consists of a set of compiler directives (pragmas) that are inserted into a Fortran, C or C++ program to convey information to an \OPENMP\ compiler.
 
 %
 %In order to scale up the capabilities of \DAEYAHSP, this paper investigated the parallelization of the individual evaluation.
